@@ -1,5 +1,9 @@
 Cascading Change Log
 
+unreleased
+
+  Fixed bug where c.g.CoGroup silently stepped on input pipes with the same input name.
+
 0.7.1
 
   Fixed bug in c.f.MultiMapReducePlanner where a source used on more than one c.p.Group would cause an internal
